finished rough draft of sf notebook

--- a/lab/aaronfolder/masteringMetricsSF.ipynb
+++ b/lab/aaronfolder/masteringMetricsSF.ipynb
@@ -1,19 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "pd.set_option('max_colwidth', None)\n",
-    "pd.set_option('display.max_columns', None)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,13 +18,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load Data\n",
-    "Load the data.csv file into a pandas dataframe.  "
+    "Run the next cell to import the libraries we'll be using to do our analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "pd.set_option('max_colwidth', None)\n",
+    "pd.set_option('display.max_columns', None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Data\n",
+    "Load the NHIS_four_drop.csv file into a ```pandas``` dataframe called ```df```.\n",
+    "\n",
+    "Replace the ```...``` with the correct ```pandas``` function to read in the data.\n",
+    " * If you're stuck, try reading the [documentation](https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -361,16 +370,21 @@
        "[29734 rows x 18 columns]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Run this cell to load our data\n",
-    "data_string = r\"NHIS_four_drop.csv\" \n",
-    "df = pd.read_csv(data_string) # csv already has marradult == 1 & perweight != 0 done\n",
-    "df#.head()"
+    "#data_string = \"NHIS_four_drop.csv\" \n",
+    "#df = ...\n",
+    "#df\n",
+    "\n",
+    "#####\n",
+    "data_string = \"NHIS_four_drop.csv\" \n",
+    "df = pd.read_csv(data_string)\n",
+    "df"
    ]
   },
   {
@@ -1871,7 +1885,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Select data where ```age``` is greater than or equal to 26 **AND** ```age``` is less than or equal to 59 **AND** ```marradult``` is equal to 1 **AND** ```adltempl``` is greater then or equal to 1.\n",
+    "Select data where ```age``` is greater than or equal to 26 **AND** ```age``` is less than or equal to 59 **AND** ```marradult``` is equal to 1 **AND** ```adltempl``` is greater then or equal to 1. Replace the ```...``` with your selection of the ```df3``` dataframe.\n",
     "* Hint: Take a look at the cells above for some pointers. Also remember to surround each of the filters!\n",
     "\n",
     "\n",
@@ -2593,8 +2607,337 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll be using two functions, ```format_data``` and ```process_data```, to calculate values and display them like they are shown in Table 1.1 of the paper."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How do we use ```process_data``` and ```format_data```? Run the following cell to find out about ```process_data```. The ```?``` in ```jupyter``` shows the documentation of the function to the ```?``` follows."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process_data?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```process_data``` seems to take in a pandas dataframe (```df```) and a binary variable ```fml``` that represents if the data being processed should select males (0) or females (1). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "format_data?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```format_data``` takes in a python list (formatted in a way like the output of ```process_data```) and returns text and a pandas dataframe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Processes the data in our original dataframe (```df```), selecting rows with ```fml == 0``` (all males) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 3.76,\n",
+       " 1.06,\n",
+       " 3.7,\n",
+       " 1.03,\n",
+       " 0.06,\n",
+       " 0.01,\n",
+       " 0.18,\n",
+       " 0.19,\n",
+       " -0.01,\n",
+       " 0.01,\n",
+       " 51.66,\n",
+       " 41.23,\n",
+       " 10.43,\n",
+       " 0.1,\n",
+       " 13.81,\n",
+       " 11.28,\n",
+       " 2.53,\n",
+       " 0.05,\n",
+       " 3.15,\n",
+       " 3.92,\n",
+       " -0.77,\n",
+       " 0.02,\n",
+       " 0.71,\n",
+       " 0.74,\n",
+       " -0.03,\n",
+       " 0.01,\n",
+       " 90475.51,\n",
+       " 42208.9,\n",
+       " 48266.61,\n",
+       " 259.57,\n",
+       " 12680,\n",
+       " 2187]"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "processed_data_output = process_data(df, 0)\n",
+    "processed_data_output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Formats the list output by ```process_data``` in the previous cell. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Husbands\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Some HI (1)</th>\n",
+       "      <th>No HI (0)</th>\n",
+       "      <th>Difference (3)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Health index</td>\n",
+       "      <td>3.76 [1.06]</td>\n",
+       "      <td>3.7 [1.03]</td>\n",
+       "      <td>0.06 (0.01)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Nonwhite</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>-0.01 (0.01)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Age</td>\n",
+       "      <td>51.66</td>\n",
+       "      <td>41.23</td>\n",
+       "      <td>10.43 (0.1)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Education</td>\n",
+       "      <td>13.81</td>\n",
+       "      <td>11.28</td>\n",
+       "      <td>2.53 (0.05)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Family Size</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>3.92</td>\n",
+       "      <td>-0.77 (0.02)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Employed</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>-0.03 (0.01)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Family Income</td>\n",
+       "      <td>90475.5</td>\n",
+       "      <td>42208.9</td>\n",
+       "      <td>48266.61 (259.57)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Sample Size</td>\n",
+       "      <td>12680</td>\n",
+       "      <td>2187</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Some HI (1)   No HI (0)     Difference (3)\n",
+       "0   Health index  3.76 [1.06]  3.7 [1.03]        0.06 (0.01)\n",
+       "1       Nonwhite         0.18        0.19       -0.01 (0.01)\n",
+       "2            Age        51.66       41.23        10.43 (0.1)\n",
+       "3      Education        13.81       11.28        2.53 (0.05)\n",
+       "4    Family Size         3.15        3.92       -0.77 (0.02)\n",
+       "5       Employed         0.71        0.74       -0.03 (0.01)\n",
+       "6  Family Income      90475.5     42208.9  48266.61 (259.57)\n",
+       "7    Sample Size        12680        2187                   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Notes: This  table  reports  average  characteristics  for  insured  and  uninsured  marriedcouples in the\n",
+      "          2009 National Health Interview Survey (NHIS). Columns (1), (2), (4), and(5) show average characteristics of\n",
+      "          the group of individuals specified by the column heading.Columns (3) and (6) report the difference between\n",
+      "          the average characteristic for individuals with and without health insurance (HI).\n",
+      "          Standard deviations are in brackets; standard errorsare reported in parentheses.\n"
+     ]
+    }
+   ],
+   "source": [
+    "format_data(processed_data_output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now it's your turn! Using the ```households_only``` dataframe your constructed earlier, use ```process_data``` and select all the male records."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 3.98,\n",
+       " 0.93,\n",
+       " 3.7,\n",
+       " 1.01,\n",
+       " 0.28,\n",
+       " 0.02,\n",
+       " 0.2,\n",
+       " 0.19,\n",
+       " 0.01,\n",
+       " 0.01,\n",
+       " 44.16,\n",
+       " 41.27,\n",
+       " 2.89,\n",
+       " 0.12,\n",
+       " 14.13,\n",
+       " 11.21,\n",
+       " 2.92,\n",
+       " 0.06,\n",
+       " 3.55,\n",
+       " 4.06,\n",
+       " -0.51,\n",
+       " 0.02,\n",
+       " 0.92,\n",
+       " 0.85,\n",
+       " 0.07,\n",
+       " 0.01,\n",
+       " 104002.44,\n",
+       " 43636.02,\n",
+       " 60366.42,\n",
+       " 294.68,\n",
+       " 7866,\n",
+       " 1529]"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Call process_data on households_only, selecting all male records\n",
+    "#male_processed_data = ...\n",
+    "#male_processed_data\n",
+    "\n",
+    "male_processed_data = process_data(households_only, 0)\n",
+    "male_processed_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now it's time to format ```male_processed_data``` using ```format_data```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -2720,10 +3063,164 @@
     }
    ],
    "source": [
-    "data_lists = process_data(households_only, 0)\n",
-    "data_lists\n",
+    "# Call format_data on male_processed_data\n",
+    "# ...\n",
+    "format_data(male_processed_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now do the same for females."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wives\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Some HI (1)</th>\n",
+       "      <th>No HI (0)</th>\n",
+       "      <th>Difference (3)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Health index</td>\n",
+       "      <td>3.99 [0.93]</td>\n",
+       "      <td>3.61 [1.02]</td>\n",
+       "      <td>0.38 (0.02)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Nonwhite</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.02 (0.01)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Age</td>\n",
+       "      <td>42.15</td>\n",
+       "      <td>39.52</td>\n",
+       "      <td>2.63 (0.12)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Education</td>\n",
+       "      <td>14.27</td>\n",
+       "      <td>11.36</td>\n",
+       "      <td>2.91 (0.06)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Family Size</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>4.07</td>\n",
+       "      <td>-0.52 (0.03)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Employed</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.22 (0.01)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Family Income</td>\n",
+       "      <td>103364</td>\n",
+       "      <td>43641.4</td>\n",
+       "      <td>59722.24 (307.41)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Sample Size</td>\n",
+       "      <td>7950</td>\n",
+       "      <td>1445</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Some HI (1)    No HI (0)     Difference (3)\n",
+       "0   Health index  3.99 [0.93]  3.61 [1.02]        0.38 (0.02)\n",
+       "1       Nonwhite          0.2         0.18        0.02 (0.01)\n",
+       "2            Age        42.15        39.52        2.63 (0.12)\n",
+       "3      Education        14.27        11.36        2.91 (0.06)\n",
+       "4    Family Size         3.55         4.07       -0.52 (0.03)\n",
+       "5       Employed         0.76         0.54        0.22 (0.01)\n",
+       "6  Family Income       103364      43641.4  59722.24 (307.41)\n",
+       "7    Sample Size         7950         1445                   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Notes: This  table  reports  average  characteristics  for  insured  and  uninsured  marriedcouples in the\n",
+      "          2009 National Health Interview Survey (NHIS). Columns (1), (2), (4), and(5) show average characteristics of\n",
+      "          the group of individuals specified by the column heading.Columns (3) and (6) report the difference between\n",
+      "          the average characteristic for individuals with and without health insurance (HI).\n",
+      "          Standard deviations are in brackets; standard errorsare reported in parentheses.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Call process_data on households_only, selecting all female records\n",
+    "#female_processed_data = ...\n",
     "\n",
-    "format_data(data_lists)"
+    "# Call format_data on female_processed_data\n",
+    "#...\n",
+    "\n",
+    "# Call process_data on households_only, selecting all female records\n",
+    "female_processed_data = process_data(households_only, 1)\n",
+    "\n",
+    "# Call format_data on female_processed_data\n",
+    "format_data(female_processed_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Congratulations! You have successfully recreated tables from a paper!"
    ]
   },
   {
