--- a/lab/aaronfolder/masteringMetricsSF.ipynb
+++ b/lab/aaronfolder/masteringMetricsSF.ipynb
@@ -11,7 +11,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this lab, we'll be recreating the findings from this [paper](http://assets.press.princeton.edu/chapters/s10363.pdf). The original analysis was done using a software called STATA. You can view the original STATA code [here](http://www.masteringmetrics.com/wp-content/uploads/2020/04/NHIS2009_hicompare_v2.do).  In this notebook, we'll being doing the same analysis using ```python``` and ```pandas``` instead."
+    "In this lab, we'll be recreating the findings from this [paper](http://assets.press.princeton.edu/chapters/s10363.pdf). The original analysis was done using a software called STATA. You can view the original STATA code [here](http://www.masteringmetrics.com/wp-content/uploads/2020/04/NHIS2009_hicompare_v2.do).  In this notebook, we'll being doing the same analysis using ```python``` and ```pandas``` instead. \n",
+    "\n",
+    "\n",
+    "Add what the data/ table is about"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll be using data from the 2009 National Health Interview Survey (NHIS),  an annual survey of the U.S. population with detailed information on health and health insurance. Among many other things, the NHIS asks: \n",
+    "*“Would you say your health in general is excellent, very good, good, fair, or poor?”* \n",
+    "\n",
+    "The NHIS uses this question data to code an index that assigns 5 to excellent health and 1 to poor health in a sample of married 2009 NHIS respondents who may or may not be insured. This index is our outcome: a measure we’re interested in  studying.  The  causal  relation  of  interest here is determined by a variable that indicates coverage byprivate health insurance. We call this variable thetreatment,borrowing from the literature on medical trials, although thetreatments we’re interested in need not be medical treatmentslike drugs or surgery. In this context, those with insurance canbe thought of as thetreatment group;those without insurancemake up thecomparisonorcontrol group. A good control group reveals the fate of the treated in a counterfactual worldwhere they are not treated"
    ]
   },
   {
@@ -23,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +383,7 @@
        "[29734 rows x 18 columns]"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,6 +395,7 @@
     "#df\n",
     "\n",
     "#####\n",
+    "\n",
     "data_string = \"NHIS_four_drop.csv\" \n",
     "df = pd.read_csv(data_string)\n",
     "df"
@@ -397,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +670,7 @@
        "max          1.0      2.000000      1.000000  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +679,7 @@
     "# Use the tool in the hint to get a description of the data set\n",
     "#...\n",
     "\n",
-    "df.describe()"
+    "df.describe() #cut this section? does not seem to be super helpful or make it more useful"
    ]
   },
   {
@@ -690,8 +704,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this next cell, we'll be using ```groupby```, ```sum```, and ```reset_index``` to generate some missing values. These operations are similar to the ```group``` function in the ```datascience``` package.\n",
+    "\n",
+    "The cell below does the following:\n",
+    "* ```groupby``` and ```sum``` creates one unique row per ```serial```\n",
+    "* ```reset_index``` removes ```serial``` as the index of the dataframe \n",
+    "* ```[[\"serial\",\"hi_hsb1\"]]``` selects the ```serial``` and ```hi_hsb1``` columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>serial</th>\n",
+       "      <th>hi_hsb1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   serial  hi_hsb1\n",
+       "0       3      0.0\n",
+       "1       5      1.0\n",
+       "2       6      1.0\n",
+       "3       7      1.0\n",
+       "4       8      1.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Run this cell to begin the cleaning process\n",
+    "df2=df.groupby(\"serial\").sum().reset_index()[[\"serial\",\"hi_hsb1\"]] # This fills some of the missing data\n",
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the next cell, we'll be using ```merge```, ```drop```, and ```rename```. These are similar to ```join```, ```drop```, and ```relabel``` in the ```datascience``` package.\n",
+    "\n",
+    "The next cell does the following:\n",
+    "* ```merge``` adds on the dataframe we made in the last cell onto the main dataframe using ```serial``` as a key.\n",
+    "* ```drop``` removes an extra column ```hi_hsb1_x```\n",
+    "* ```rename``` renames the column ```hi_hsb1_y``` to ```hi_hsb``` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +850,8 @@
        "      <th>inc</th>\n",
        "      <th>marradult</th>\n",
        "      <th>adltempl</th>\n",
-       "      <th>hi_hsb</th>\n",
+       "      <th>hi_hsb1_x</th>\n",
+       "      <th>hi_hsb1_y</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -755,6 +874,7 @@
        "      <td>19282.932</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -777,6 +897,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -798,6 +919,7 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -818,6 +940,7 @@
        "      <td>167844.530</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -840,9 +963,11 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -881,6 +1006,7 @@
        "      <td>167844.530</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -902,6 +1028,7 @@
        "      <td>61102.973</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -924,6 +1051,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29732</th>\n",
@@ -945,6 +1073,7 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29733</th>\n",
@@ -965,11 +1094,12 @@
        "      <td>167844.530</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>29734 rows × 18 columns</p>\n",
+       "<p>29734 rows × 19 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -999,55 +1129,30 @@
        "29732    0       0   0     9     1     1  167844.530          1         2   \n",
        "29733    1       0   0     9     1     2  167844.530          1         2   \n",
        "\n",
-       "       hi_hsb  \n",
-       "0         0.0  \n",
-       "1         0.0  \n",
-       "2         1.0  \n",
-       "3         1.0  \n",
-       "4         1.0  \n",
-       "...       ...  \n",
-       "29729     1.0  \n",
-       "29730     1.0  \n",
-       "29731     1.0  \n",
-       "29732     0.0  \n",
-       "29733     0.0  \n",
+       "       hi_hsb1_x  hi_hsb1_y  \n",
+       "0            NaN        0.0  \n",
+       "1            0.0        0.0  \n",
+       "2            1.0        1.0  \n",
+       "3            NaN        1.0  \n",
+       "4            1.0        1.0  \n",
+       "...          ...        ...  \n",
+       "29729        NaN        1.0  \n",
+       "29730        NaN        1.0  \n",
+       "29731        1.0        1.0  \n",
+       "29732        0.0        0.0  \n",
+       "29733        NaN        0.0  \n",
        "\n",
-       "[29734 rows x 18 columns]"
+       "[29734 rows x 19 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Run this cell to begin the cleaning process\n",
-    "df2=df.groupby(\"serial\").sum().reset_index()[[\"serial\",\"hi_hsb1\"]] # This fills some of the missing data\n",
-    "df3=df.merge(df2,how=\"left\",on=\"serial\").drop(\"hi_hsb1_x\",axis=1).rename(columns={\"hi_hsb1_y\":\"hi_hsb\"})\n",
-    "df3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'df4=df3.groupby(\"serial\").sum().reset_index()\\nlistlike=df4[df4[[\"serial\",\"fml\"]][\"fml\"]==0][\"serial\"].tolist()\\ndf5=df[~df[\"serial\"].isin(listlike)]\\ndf5.to_csv(\"NHIS_four_drop.csv\")'"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"df4=df3.groupby(\"serial\").sum().reset_index()\n",
-    "listlike=df4[df4[[\"serial\",\"fml\"]][\"fml\"]==0][\"serial\"].tolist()\n",
-    "df5=df[~df[\"serial\"].isin(listlike)]\n",
-    "df5.to_csv(\"NHIS_four_drop.csv\")\"\"\""
+    "df3=df.merge(df2,how=\"left\",on=\"serial\")#.drop(\"hi_hsb1_x\",axis=1).rename(columns={\"hi_hsb1_y\":\"hi_hsb\"})\n",
+    "df3 # break up into separate cells or abstract"
    ]
   },
   {
@@ -1081,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1291,7 @@
        "5393      NaN  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1634,7 @@
        "[9314 rows x 18 columns]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1548,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1872,7 +1977,7 @@
        "[5922 rows x 18 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1900,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2224,19 +2329,21 @@
        "[20121 rows x 18 columns]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#age greater than or equal 26, age less than or equal to 59, marradult equal to 1, and adltempl greater than or equal to 1\n",
+    "# age greater than or equal 26, age less than or equal to 59, ...\n",
+    "# marradult equal to 1, and adltempl greater than or equal to 1 in one selection\n",
     "# Look at Example 3 for help\n",
+    "\n",
     "#data_selected = ...\n",
     "#data_selected\n",
     "\n",
     "data_selected = df3[(df3[\"age\"] >= 26) & (df3[\"age\"]<= 59) & (df3[\"marradult\"] == 1) & (df3[\"adltempl\"] >= 1)]\n",
-    "data_selected"
+    "data_selected # split into to four boolean variables before"
    ]
   },
   {
@@ -2248,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2572,7 +2679,7 @@
        "[18790 rows x 18 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2580,6 +2687,72 @@
    "source": [
     "households_only = data_selected.groupby([\"serial\"]).filter(lambda x: len(x)>1)\n",
     "households_only"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>serial</th>\n",
+       "      <th>hhweight</th>\n",
+       "      <th>pernum</th>\n",
+       "      <th>perweight</th>\n",
+       "      <th>sampweight</th>\n",
+       "      <th>age</th>\n",
+       "      <th>famsize</th>\n",
+       "      <th>fml</th>\n",
+       "      <th>nwhite</th>\n",
+       "      <th>hi</th>\n",
+       "      <th>yedu</th>\n",
+       "      <th>empl</th>\n",
+       "      <th>hlth</th>\n",
+       "      <th>inc</th>\n",
+       "      <th>marradult</th>\n",
+       "      <th>adltempl</th>\n",
+       "      <th>hi_hsb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [year, serial, hhweight, pernum, perweight, sampweight, age, famsize, fml, nwhite, hi, yedu, empl, hlth, inc, marradult, adltempl, hi_hsb]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "households_only[households_only[\"fml\"].isna()]"
    ]
   },
   {
@@ -2626,14 +2799,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "process_data?"
+    "process_data? # usually don't do this"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```process_data``` seems to take in a pandas dataframe (```df```) and a binary variable ```fml``` that represents if the data being processed should select males (0) or females (1). "
+    "```process_data``` takes in a pandas dataframe (```df```) and a binary variable ```fml``` that represents if the data being processed should select males (0) or females (1). "
    ]
   },
   {
@@ -3065,7 +3238,7 @@
    "source": [
     "# Call format_data on male_processed_data\n",
     "# ...\n",
-    "format_data(male_processed_data)"
+    "format_data(male_processed_data) # provide what this table is -- some context about column names"
    ]
   },
   {
@@ -3209,6 +3382,8 @@
     "# Call format_data on female_processed_data\n",
     "#...\n",
     "\n",
+    "####\n",
+    "\n",
     "# Call process_data on households_only, selecting all female records\n",
     "female_processed_data = process_data(households_only, 1)\n",
     "\n",
@@ -3228,7 +3403,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# add context at end of what we did and what we learned \n",
+    "# BUILD a narrative"
+   ]
   }
  ],
  "metadata": {
