--- a/lab/lab3/PS88_lab_week3.ipynb
+++ b/lab/lab3/PS88_lab_week3.ipynb
@@ -2062,16 +2062,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5764"
+       "True"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2083,16 +2083,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5764"
+       "True"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2104,16 +2104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5764"
+       "True"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2238,7 +2238,7 @@
     "**What is the probability of a voter in each group being pivotal?**\n",
     "```\n",
     "BEGIN QUESTION\n",
-    "name: q4c\n",
+    "name: q4e\n",
     "```"
    ]
   },
@@ -2268,21 +2268,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## TEST ##\n",
+    "# TEST \n",
     "0 <= voter_2_pivotal_prob <= .25"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## TEST ##\n",
+    "# TEST \n",
     "0 <= voter_3_pivotal_prob <= .25"
    ]
   },
